--- a/.gitignore
+++ b/.gitignore
@@ -4,28 +4,51 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
 venv/
 ENV/
-.venv
-
-# Database
-coach.db
-*.parquet
+env/
+.venv/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
+
+# Project specific
+coach.db
+*.db
+.env
+.env.*
+!env.example
+
+# API Keys and Secrets
+*.key
+*.pem
+secrets/
 
 # OS
 .DS_Store
 Thumbs.db
-
-# API Keys
-.env
-.env.local
 
 # Temporary files
 *.tmp
