--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-typer
-prompt_toolkit
-pandas
-duckdb
-requests
-openai
-rich 
+typer==0.9.0
+rich==13.7.0
+prompt_toolkit==3.0.43
+requests==2.31.0
+pandas==2.1.4
+duckdb==0.9.2
+openai==1.6.1
+python-dotenv==1.0.0 
