--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-typer==0.9.0
-rich==13.7.0
-prompt_toolkit==3.0.43
-requests==2.31.0
-pandas==2.1.4
-duckdb==0.9.2
-openai==1.6.1
-python-dotenv==1.0.0 
+requests==2.32.3
+pandas==2.2.3
+duckdb==1.1.3
+openai==1.57.2
+typer==0.15.1
+rich==13.9.4
+prompt-toolkit==3.0.48
+python-dotenv==1.0.1
+polars==0.20.3
+pyyaml==6.0.1
+flask==3.0.0 
