--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ prompt-toolkit==3.0.48
 python-dotenv==1.0.1
 polars==0.20.3
 pyyaml==6.0.1
-flask==3.0.0 
+flask==3.0.0
+gunicorn==21.2.0
+scipy==1.11.4 
