--- a/env.example
+++ b/env.example
@@ -8,4 +8,7 @@ HELIUS_KEY=your-helius-api-key-here
 CIELO_KEY=your-cielo-api-key-here
 
 # OpenAI API Key (get from https://platform.openai.com/)
-OPENAI_API_KEY=your-openai-api-key-here 
+OPENAI_API_KEY=your-openai-api-key-here
+
+# Telegram Bot Token (get from @BotFather on Telegram)
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here 
