--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ polars==0.20.3
 pyyaml==6.0.1
 flask==3.0.0
 gunicorn==21.2.0
-scipy==1.11.4 
+scipy==1.11.4
+flask-cors
+numpy
+playwright
+python-telegram-bot==21.7 
