--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-# API Keys for WalletDoctor
+# API Keys for Tradebro
 # Copy this file to .env and fill in your actual API keys
 
 # Helius API Key (get from https://dev.helius.xyz/)
