Fix large wallet analysis with 30-day filtering - Add 30-day filtering for wallets with 1000+ trades - Provides accurate recent performance instead of misleading partial data - Updates bot messaging to show 'Last 30 days' context for large wallets - Adds python-dateutil dependency for date parsing

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ flask==3.0.0
 gunicorn==21.2.0
 scipy==1.11.4
 numpy
-python-telegram-bot==21.7 
+python-telegram-bot==21.7
+python-dateutil==2.8.2 
