--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ pip-audit==2.6.1  # Added for security auditing
 httpx==0.25.2  # Added for better async testing
 locust==2.17.0  # Added for load testing
 pytest-mock==3.10.0  # Added for mocking
+hypothesis==6.135.20  # Added for property-based testing
 
 # Caching
 redis==5.0.1  # Added for market cap caching
