--- a/.github/workflows/gpt-validation.yml
+++ b/.github/workflows/gpt-validation.yml
@@ -33,6 +33,8 @@ jobs:
         env:
           API_KEY: ${{ secrets.WD_API_KEY }}
           API_BASE_URL: ${{ secrets.API_BASE_URL || 'https://walletdoctor.app' }}
+          HELIUS_KEY: ${{ secrets.HELIUS_KEY }}
+          BIRDEYE_API_KEY: ${{ secrets.BIRDEYE_API_KEY }}
           SKIP_INTEGRATION_TESTS: false
       
       - name: Upload test results
