--- a/.github/workflows/gpt-integration.yml
+++ b/.github/workflows/gpt-integration.yml
@@ -239,6 +239,59 @@ jobs:
             echo "::warning title=${{ matrix.alias }} Request::HTTP $HTTP_CODE for wallet ${{ matrix.wallet }}"
           fi
 
+  # New job for v0.8.0-prices GPT E2E validation
+  gpt-e2e-validation:
+    runs-on: ubuntu-latest
+    needs: schema-validation
+    timeout-minutes: 5
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y jq bc curl
+    
+    - name: Run GPT E2E Evaluation
+      env:
+        API_KEY: ${{ secrets.GPT_TEST_API_KEY || 'wd_test1234567890abcdef1234567890ab' }}
+      run: |
+        echo "🔍 Running GPT E2E Validation for v0.8.0-prices"
+        echo "================================================"
+        
+        # Make script executable
+        chmod +x docs/gpt_prompt_package/run_eval.sh
+        
+        # Run evaluation
+        if docs/gpt_prompt_package/run_eval.sh; then
+          echo ""
+          echo "✅ GPT E2E validation passed!"
+        else
+          echo ""
+          echo "❌ GPT E2E validation failed!"
+          exit 1
+        fi
+    
+    - name: Check Performance Thresholds
+      if: always()
+      run: |
+        echo "Performance Thresholds:"
+        echo "- Cold start: <8s (fail), <6s (warn)"
+        echo "- Warm start: <5s (fail), <3s (warn)"
+        echo "- Price coverage: ≥90% required"
+        echo "- Schema version: v0.8.0-prices required"
+    
+    - name: Upload Evaluation Results
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: gpt-e2e-results
+        path: |
+          /tmp/eval_*.json
+        retention-days: 7
+        if-no-files-found: ignore
+
   # Future: Add matrix for larger wallets when CCH-001 lands
   # test-large-wallets:
   #   if: false  # Enable after CCH-001
